# nvim-russian-thesaurus

./: README.md  pyproject.toml
docs/plans/: 2026-02-18-thesaurus-query-nvim-design.md  2026-02-18-thesaurus-query-nvim-implementation.md  2026-02-24-lemmatization-design.md  2026-02-24-lemmatization-plan.md
lua/nvim-russian-thesaurus/: data.lua  init.lua  morph.lua  query.lua
plugin/: nvim-russian-thesaurus.lua
scripts/: morph_server.py
tests/: data_spec.lua  morph_spec.lua  query_spec.lua  test_morph_server.py
tests/fixtures/: test-synsets.csv
