[project]
name = "nvim-russian-thesaurus"
version = "0.1.0"
description = "Dev tooling for nvim-russian-thesaurus"
requires-python = ">=3.8"
dependencies = ["pymorphy3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
